--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.38.0
-pillow==10.4.0
-numpy==1.26.4
-pandas==2.2.2
-scikit-learn==1.5.1
-requests==2.32.3
-ImageHash==4.3.1
+streamlit
+pillow
+numpy
+pandas
+scikit-learn
+requests
+ImageHash
